design-principles-02/src/main/java/com/farhad/example/design_principles02/solidprinciples_and_designpatterns/isp/good/Customer.java
package com.farhad.example.design_principles02.solidprinciples_and_designpatterns.isp.good;

import lombok.Value;

@Value
public class Customer {

	private String customerId;
}
