design-principles-02/src/main/java/com/farhad/example/design_principles02/solidprinciples_and_designpatterns/isp/bad/Order.java
package com.farhad.example.design_principles02.solidprinciples_and_designpatterns.isp.bad;

import lombok.Value;

@Value
public class Order {

	private String orderId;
	private Customer customer;
	private Address shippingAddress;
	private CreditCardInfo cardInfo;
}
